Exclude admin folder from clean URL redirects

--- a/.htaccess
+++ b/.htaccess
@@ -25,8 +25,9 @@ RewriteRule ^ /%1 [R=301,L]
 
 # 301 Redirect .php URLs to clean URLs (SEO-friendly)
 # Example: /quartz-brands.php redirects to /quartz-brands
-# Skip API folder to allow POST requests
+# Skip API and admin folders
 RewriteCond %{REQUEST_URI} !^/api/ [NC]
+RewriteCond %{REQUEST_URI} !^/admin/ [NC]
 RewriteCond %{THE_REQUEST} \s/(.+)\.php[\s?] [NC]
 RewriteRule ^ /%1 [R=301,L]
 
