--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
             --exclude README.md \
             --exclude .gitignore \
             --exclude node_modules/ \
+             --exclude api/config.php \ 
             ./ ./
           bye
           EOF
