--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,30 @@
-name: Deploy to cPanel                                                                                                           
-                                                                                                                                   
-  on:                                                                                                                              
-    push:                                                                                                                          
-      branches:                                                                                                                    
-        - main                                                                                                                     
-                                                                                                                                   
-  jobs:                                                                                                                            
-    deploy:                                                                                                                        
-      runs-on: ubuntu-latest                                                                                                       
-                                                                                                                                   
-      steps:                                                                                                                       
-        - name: Checkout code                                                                                                      
-          uses: actions/checkout@v4                                                                                                
-                                                                                                                                   
-        - name: Deploy via FTP                                                                                                     
-          run: |                                                                                                                   
-            sudo apt-get install -y lftp                                                                                           
-            lftp -u "${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }}" "${{ secrets.FTP_SERVER }}" <<EOF                    
-            set ssl:verify-certificate no                                                                                          
-            mirror --reverse --delete --verbose --exclude .git/ --exclude .github/ --exclude README.md --exclude .gitignore        
-  --exclude node_modules/ --exclude api/config.php ./ ./                                                                           
-            bye                                                                                                                    
-            EOF          
+name: Deploy to cPanel
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy via FTP
+        run: |
+          sudo apt-get install -y lftp
+          lftp -u "${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }}" "${{ secrets.FTP_SERVER }}" <<EOF
+          set ssl:verify-certificate no
+          mirror --reverse --delete --verbose \
+            --exclude .git/ \
+            --exclude .github/ \
+            --exclude README.md \
+            --exclude .gitignore \
+            --exclude node_modules/ \
+            --exclude api/config.php \
+            ./ ./
+          bye
+          EOF
