--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
             --exclude .gitignore \
             --exclude node_modules/ \
             --exclude api/config.php \
+            --exclude admin/leads.php \
             ./ ./
           bye
           EOF
